# rust_backend

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
data/: cinemadb.db
database/: cinema.db  cinemadb.db
migrations/2024-04-06-234843_users/: up.sql
migrations/2024-04-06-235926_role/: up.sql
migrations/2024-04-06-235936_content/: up.sql
migrations/2024-04-06-235947_file/: down.sql  up.sql
migrations/2024-04-07-000011_history/: down.sql  up.sql
migrations/2024-04-07-000047_subscribe/: down.sql  up.sql
migrations/2024-04-07-000054_subscribeAndUser/: down.sql  up.sql
migrations/2024-04-07-000455_contentForPreferences/: down.sql  up.sql
migrations/2024-04-07-000532_workers/: down.sql  up.sql
migrations/2024-04-07-013844_codepromo/: down.sql  up.sql
nado/: Cargo.toml  Dockerfile
nado/src/: lib.rs  main.rs  models.rs  schema.rs
src/: admin_function.rs  claims.rs  function.rs  main.rs  models.rs  transmitted_models.rs  user_function.rs
