[package]
name = "rust-back"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
rocket_codegen = "0.5.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
