[package]
name = "rust-back"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = {version = "8.1.1", default-features = false}
sqlite = "0.34.0"
rocket = {version = "0.5.0", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.23"




